<resources>
    <string name="app_name">Sum Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_welcome_logo">Абстрактная картинка про математику</string>
    <string name="welcome_title">Состав числа</string>
    <string name="text_game_rules">Перед вами будет три фигуры - две снизу и одна сверху. В двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре - для этого нужно вставить недостающее число.</string>
    <string name="title_game_rules">Правила игры</string>
    <string name="title_example">Пример</string>
    <string name="text_game_example">В верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно стоять число 3, поскольку 3 + 4 = 7.</string>
    <string name="btn_got_it">Понятно</string>
    <string name="title_select_level">Выберите сложность</string>
    <string name="level_test">Тест</string>
    <string name="level_easy">Легко</string>
    <string name="level_middle">Средне</string>
    <string name="level_hard">Сложно</string>
    <string name="game_right_answers_count">Правильных ответов %s (минимум %s)</string>
    <string name="desc_result_logo">Иллюстрация к результатам</string>
    <string name="title_game_result">Результат игры</string>
    <string name="title_required_right_answers">Необходимое количество правильных ответов:</string>
    <string name="title_your_score">Ваш счет:</string>
    <string name="title_required_percent_of_right_answers">Необходимый процент правильных ответов:</string>
    <string name="title_percent_of_right_answers">Процент правильных ответов:</string>
    <string name="btn_try_again">Попробовать снова</string>
</resources>