<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.WelcomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/iv_welcome_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/desc_welcome_logo"
                android:src="@drawable/welcome_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_welcome_title"
                style="?attr/textAppearanceHeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/welcome_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_welcome_logo" />

            <TextView
                android:id="@+id/tv_title_required_right_answers"
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title_game_rules"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title" />

            <TextView
                android:id="@+id/tv_required_right_answers"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_game_rules"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_required_right_answers" />

            <TextView
                android:id="@+id/tv_title_game_example"
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_required_right_answers" />

            <TextView
                android:id="@+id/tv_text_game_example"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_game_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_game_example" />

            <Button
                android:id="@+id/btn_got_it"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_got_it"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_game_example" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>